<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp">

    <TextView
        android:id="@+id/lblBillName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:textSize="22sp"
        android:text="@string/contribution_name_text" />

    <TextView
        android:id="@+id/lblContributorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:text="@string/item_contributor" />

    <TextView
        android:id="@+id/lblAmountPaidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        android:layout_marginStart="24dp"
        android:text="@string/amount_paid_text"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/lblAmountOwedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:text="@string/amount_owed_text"
        android:textSize="16sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/lblAmountPaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:layout_marginStart="24dp"
        android:text="@string/amount_value"
        android:textSize="22sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/lblAmountOwed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:text="@string/amount_value"
        android:textSize="22sp"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>