<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblContributionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:text=""
        android:textSize="16sp"
        tools:text="@string/contribution_name" />

    <TextView
        android:id="@+id/lblContributionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblContributionName"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:text=""
        android:textSize="12sp"
        tools:text="@string/date_start" />

    <TextView
        android:id="@+id/lblContributionAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="18dp"
        android:text="@string/contribution_amount"
        android:textSize="20sp"
        android:textStyle="bold"/>

</RelativeLayout>