<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtLastname"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgContributor"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        tools:srcCompat="@tools:sample/avatars"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:layout_toEndOf="@+id/imgContributor"
        android:text="@string/full_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblAmountDue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="18dp"
        android:text="@string/amount_due"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/lblFlatNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblFullName"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/imgContributor"
        android:text="@string/flat_name"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblFullName"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/lblFlatNumber"
        android:text="@string/item_status"
        android:textSize="12sp" />

</RelativeLayout>