<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblExpenseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="14dp"
        android:text=""
        android:textSize="16sp"
        tools:text="@string/expense_name" />

    <TextView
        android:id="@+id/lblExpenseDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblExpenseName"
        android:layout_marginStart="14dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:text=""
        android:textSize="12sp"
        tools:text="@string/expense_description" />

    <TextView
        android:id="@+id/lblExpenseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="18dp"
        android:text="@string/expense_amount"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

</RelativeLayout>